--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
+*.mp4
+*.p00p
+*.pckl
 
 *~
 *.autosave
